# shops-auth

./: .dockerignore  .eslintrc.js  .gitignore  Cargo.toml  Dockerfile  README.md  README_2.md  example.env  package.json
.github/workflows/: action.yaml
deployments/: prod.yaml
entity/: Cargo.toml
entity/src/: lib.rs  user.rs
migration/src/: m20220101_000001_create_table.rs
src/: AppModule.ts  app.controller.ts  app.module.ts  bootstrap.ts  main.ts
src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  constants.ts
src/auth/strategy/: google.strategy.ts  jwt.strategy.ts
src/config/: typeorm.ts
src/migrations/: 1712998092851-new.ts  1713009027379-create_account_table.ts
src/modules/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
src/modules/auth/strategy/: google.strategy.ts  jwt.strategy.ts
src/modules/users/: users.service.ts
src/persistants/pg/entities/: account.entity.ts  base.entity.ts  index.ts
src/users/: users.service.ts
test/: app.e2e-spec.ts
web/: Cargo.toml
web/src/: app_route.rs  lib.rs  main.rs
web/src/connections/: postgres.rs
web/src/controllers/: auth_controller.rs
web/src/dtos/: mod.rs
web/src/services/auth/: login.rs  mod.rs  strategy.rs
