[workspace]
resolver = "2"
members = ["web", "entity", "migration"]
default-members = ["web"]

[workspace.dependencies]
# web
axum = { version = "0.7.4", features = ["tracing", "macros"] }
axum-extra = { version = "0.9.2", features= ["typed-header"]}
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }

# db
sea-orm = { version = "0.12.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print", "with-chrono", "with-json" ] }
sea-orm-cli = "0.12.12"

# util
uuid = { version = "1.0", features = ["serde", "v4"] }
serde =  { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.95"
jsonwebtoken = "8.3.0"
chrono = { version = "0.4.24", features = ["serde"] }
bcrypt = "0.14.0"
mockall = "0.11.4"
validator = { version = "0.16.0", features = ["derive"] }
url = "2.2"
dotenvy = "0.15.7"
async-trait = "0.1.68"
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
oauth2 = "4.4.2"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# error handling
anyhow = "1.0"
thiserror = "1.0.40"
