[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }

tokio = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower =  { workspace = true }
tower-http =  { workspace = true }

sea-orm = { workspace = true }

# util
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
bcrypt = { workspace = true }
validator = { workspace = true }
url = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }

# tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
